# KindyunAI

./: KindyunAI.cbp  KindyunAI.depend  KindyunAI.layout  README.md  VERSION.md  main.cpp
Release/: KindyunAI V1.0.0.0.7z
config/: config.json
include/kindyun/: ApprovalManager.hpp  Config.hpp  ConversationLoop.hpp  ExternalService.hpp  HttpServer.hpp  KindyunGlobal.hpp  KindyunPlugin.hpp  LLMClient.hpp  MemoryDB.hpp  SessionManager.hpp  TokenEstimator.hpp  ToolBase.hpp  ToolDispatcher.hpp  Types.hpp
plugins/KindyunPluginWebBrowser/: KindyunPluginWebBrowser.cbp  KindyunPluginWebBrowser.cpp  KindyunPluginWebBrowser.hpp  KindyunPluginWebBrowser.layout  README.md
plugins/WordTool/: CMakeLists.txt  WordTool.cpp
src/: Config.cpp  LLMClient.cpp
src/core/: ApprovalManager.cpp  ConversationLoop.cpp  MemoryDB.cpp  PluginLoader.cpp  TokenEstimator.cpp
src/server/: ApiGateway.cpp  ApiGateway.hpp  ApiHandlers.cpp  ApiHandlers.hpp  ExternalService.cpp  HttpServer.cpp
src/server/services/: EchoService.cpp  EchoService.hpp  HttpForwardService.cpp  HttpForwardService.hpp  ServiceBase.cpp  ServiceBase.hpp
